# mobility-serving-layer

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: health.py  metadata.py  predict.py
app/core/: config.py  logging.py  startup.py  state.py
app/features/: loader.py  mapper.py  reconstructor.py  validator.py
app/model/: lgbm_wrapper.py  loader.py  metadata.py  predictor.py
app/observability/: aggregator.py  context.py  emission.py  paths.py  writer.py
app/schemas/: errors.py  feature_schema.py  observability.py  request.py  response.py
app/services/: inference.py
app/sql/: score_features.sql
contracts/: serving_observability.md
tests/: conftest.py  test_aggregator.py  test_health.py  test_metadata.py  test_observability.py  test_observability_wiring.py  test_predict.py  test_validator.py
